@@ -241,6 +241,32 @@ const run = async (): Promise<void> => {
 
   {
     const outDir = mkTmp();
+    const tmp = mkTmp();
+    const input = path.join(tmp, "duplicate_paths.zip");
+    writeStoredZip(input, [
+      { name: "a.txt", text: "alpha-a" },
+      { name: "a.txt", text: "alpha-b" },
+    ]);
+    const res = await runCliCapture(["safe-run", input, "--out", outDir, "--adapter", "archive"]);
+    assertEq(res.status, 40, "safe-run archive should fail closed for strict zip route with duplicate entry paths");
+    assert(res.stderr.includes("ARCHIVE_FORMAT_MISMATCH"), "expected ARCHIVE_FORMAT_MISMATCH on stderr for duplicate zip entry paths");
+  }
+
+  {
+    const outDir = mkTmp();
+    const tmp = mkTmp();
+    const input = path.join(tmp, "duplicate_paths.tar");
+    writeSimpleTar(input, [
+      { name: "a.txt", text: "alpha-a" },
+      { name: "a.txt", text: "alpha-b" },
+    ]);
+    const res = await runCliCapture(["safe-run", input, "--out", outDir, "--adapter", "archive"]);
+    assertEq(res.status, 40, "safe-run archive should fail closed for strict tar route with duplicate entry paths");
+    assert(res.stderr.includes("ARCHIVE_FORMAT_MISMATCH"), "expected ARCHIVE_FORMAT_MISMATCH on stderr for duplicate tar entry paths");
+  }
+
+  {
+    const outDir = mkTmp();
     const input = path.join(process.cwd(), "tests", "fixtures", "intake", "tampered_manifest", "tampered.zip");
     const res = await runCliCapture([
       "safe-run",
